[package]
name = "steak"
version = "0.1.0"
description = "Token-2022 staking vault with epoch-based snapshots"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "steak"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = "0.31.1"
spl-token-2022 = { version = "6", features = ["no-entrypoint"] }
